[gd_scene load_steps=11 format=3 uid="uid://dspsfw6gjdhv5"]

[ext_resource type="Script" path="res://Battle/Field/field_unit.gd" id="1_uyh4s"]
[ext_resource type="Texture2D" uid="uid://byvq6x8wedfsh" path="res://Battle/UI/battle_target_mark.png" id="2_qsoj3"]
[ext_resource type="Script" path="res://Battle/Field/unit_sprite.gd" id="2_sb1nl"]

[sub_resource type="Animation" id="Animation_wng0f"]
resource_name = "Death"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(20, 0), Vector2(0, 0), Vector2(20, 0), Vector2(0, 0), Vector2(20, 0), Vector2(0, 0), Vector2(20, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.427451, 0.427451, 0.427451, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_trqd8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gvyfa"]
_data = {
"Death": SubResource("Animation_wng0f"),
"RESET": SubResource("Animation_trqd8")
}

[sub_resource type="Animation" id="Animation_fshg0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ovp0k"]
resource_name = "Spin"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a086f"]
_data = {
"RESET": SubResource("Animation_fshg0"),
"Spin": SubResource("Animation_ovp0k")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_jgt8k"]
radius = 24.0

[node name="Field Unit" type="Area2D"]
script = ExtResource("1_uyh4s")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
script = ExtResource("2_sb1nl")

[node name="Shadow" type="AnimatedSprite2D" parent="Sprite"]
z_index = -1

[node name="EquipmentContainer" type="Node2D" parent="Sprite"]

[node name="AtkEquipmentContainer" type="Node2D" parent="Sprite"]

[node name="TravelEquipmentContainer" type="Node2D" parent="Sprite"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_gvyfa")
}

[node name="Target" type="TextureRect" parent="."]
visible = false
offset_left = -32.5
offset_top = -34.0
offset_right = 33.5
offset_bottom = 32.0
pivot_offset = Vector2(33, 33)
texture = ExtResource("2_qsoj3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Target"]
autoplay = "Spin"
libraries = {
"": SubResource("AnimationLibrary_a086f")
}

[node name="Clickable" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jgt8k")

[connection signal="AnimationFinished" from="Sprite" to="." method="_on_unit_animation_finished"]
[connection signal="animation_finished" from="Sprite" to="Sprite" method="_on_animation_finished"]
[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_death_animation_finished"]
